--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "utils-xk",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "utils",
   "main": "index.js",
   "scripts": {
@@ -19,5 +19,22 @@
     "url": "https://github.com/xukung/npmUtils/issues"
   },
   "homepage": "https://github.com/xukung/npmUtils#readme",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "bundle-loader": "^0.5.5",
+    "dom-to-image": "^2.6.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "express-session": "^1.14.0",
+    "file-loader": "^0.9.0",
+    "path": "^0.12.7",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "~3.10.0"
+  }
 }
